--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <h1 class="saluteText">Hi</h1>
          </div>
          <div class="saluteImgContainer">
-           <img src="images/person.png" alt="person" class="saluteImg">
+           <img src="Images/person.png" alt="person" class="saluteImg">
          </div>
        </div>
        <div class="nameContainer">
@@ -35,7 +35,7 @@
        <h1 class="projectsTitle">Here are some projects</h1>
        <div class="project">
          <div class="phone">
-           <img src="images/phone.png" alt="phone-photo">
+           <img src="Images/phone.png" alt="phone-photo">
            <div class="screen">
              <img src="images/phoneApp.png" alt="cryptoApp" class="phoneApp">
            </div>
@@ -48,7 +48,7 @@
        </div>
        <div class="project">
          <div class="laptop">
-           <img src="images/laptop.png" alt="laptop-photo">
+           <img src="Images/laptop.png" alt="laptop-photo">
            <div class="laptopScreen">
              <img src="images/movieApp.png" alt="movieApp" class="laptopApp">
            </div>
@@ -61,13 +61,13 @@
        </div>
        <div class="project">
          <div class="phone">
-           <img src="images/phone.png" alt="phone-photo">
+           <img src="Images/phone.png" alt="phone-photo">
            <div class="screen">
-             <img src="images/foodApp.png" alt="cryptoApp" class="phoneApp">
+             <img src="Images/foodApp.png" alt="cryptoApp" class="phoneApp">
            </div>
          </div>
          <div class="projectDetails">
-           <h1 class="projectTitle">Vortex</h1>
+           <h1 class="projectTitle">Ordering</h1>
            <p class="projectDesc">Familiarize Yourself with Operating Systems: Gain proficiency in various operating systems including Windows, Linux, and macOS. Understand their architecture, file systems, and command-line interfaces.</p>
            <button class="projectBtn">Learn more</button>
          </div>
@@ -96,7 +96,7 @@
        </div>
        <div class="githubSm">
          <a href="">
-           <img src="images/github.png" alt="githublogo">
+           <img src="Images/github.png" alt="githublogo">
          </a>
          <h1>Find me on github</h1>
        </div>
