--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
          <div class="phone">
            <img src="Images/phone.png" alt="phone-photo">
            <div class="screen">
-             <img src="images/phoneApp.png" alt="cryptoApp" class="phoneApp">
+             <img src="Images/phoneApp.png" alt="cryptoApp" class="phoneApp">
            </div>
          </div>
          <div class="projectDetails">
@@ -50,7 +50,7 @@
          <div class="laptop">
            <img src="Images/laptop.png" alt="laptop-photo">
            <div class="laptopScreen">
-             <img src="images/movieApp.png" alt="movieApp" class="laptopApp">
+             <img src="Images/movieApp.png" alt="movieApp" class="laptopApp">
            </div>
          </div>
          <div class="projectDetails">
