--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          <h1 class="githubTitle">ON GITHUB</h1>
        </div>
        <div class="githubSm">
-         <a href="">
+         <a href="https://github.com/Ridwan-Al-Mahmud">
            <img src="Images/github.png" alt="githublogo">
          </a>
          <h1>Find me on github</h1>
